# qubot

./: .gitignore  README.md  pyproject.toml
driver/: README.md  pyproject.toml
driver/src/qubot_drivers/cv/: camera.py
driver/src/qubot_drivers/labware/: MEA_cell_MTP.json  __init__.py  labware.py  sartorious_96_tiprack_1000ul.json
driver/src/qubot_drivers/machines/: __init__.py  first.py  pipqubotv3.py
driver/src/qubot_drivers/move/: __init__.py  deck.py  grblHAL.py  reprap.py
driver/src/qubot_drivers/transfer/liquid/sartorius/: rLine.py
driver/tests/: first.py  pipette.py  poll_position.py  qubot.py  test_deck.py  test_position_polling.py  webcam.py
edge/: .env.example  Dockerfile  README.md  compose.yml  main.py  pyproject.toml
