[project]
name = "qubot-drivers"
version = "0.0.39"
description = "qubot drivers for the PUDA platform."
readme = "README.md"
authors = [
    { name = "zhao", email = "20024592+agentzhao@users.noreply.github.com" }
]
requires-python = ">=3.10"
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: System :: Hardware",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

dependencies = [
    "nats-py>=2.12.0",
    "numpy==2.4.2",  # Explicit numpy to ensure proper Windows wheels (avoids MINGW-W64 builds)
    "opencv-python>=4.12.0.88",
    "pyserial~=3.5",
]
[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/PUDAP/puda"
Issues = "https://github.com/PUDAP/puda/issues"
