[project]
name = "first-edge"
version = "0.1.0"
description = "Edge service for the 'first' machine"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "qubot-drivers",
    "puda-comms==0.0.9",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
]

[tool.uv.sources]
qubot-drivers = {workspace=true}